--- a/index.html
+++ b/index.html
@@ -1,44 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Prueba de código JavaScript con Axios</title>
+  <title>Script con Axios 2</title>
 </head>
 <body>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script>
-    // Clave de API de TMDb
-    const apiKey = '151789e15fdaffa657de9fc429607639';
-
-    // Función para buscar películas por título
-    async function buscarPeliculas(titulo) {
-      try {
-        // Realizar una solicitud GET a la API de TMDb
-        const respuesta = await axios.get('https://api.themoviedb.org/3/search/movie', {
-          params: {
-            api_key: apiKey,
-            query: titulo
-          }
-        });
-
-        // Obtener los resultados de la búsqueda de películas
-        const resultados = respuesta.data.results;
-
-        // Mostrar los detalles de cada película encontrada
-        resultados.forEach(pelicula => {
-          console.log('Título:', pelicula.title);
-          console.log('Fecha de lanzamiento:', pelicula.release_date);
-          console.log('Sinopsis:', pelicula.overview);
-          console.log('-------------------------');
-        });
-
-      } catch (error) {
-        console.error('Error al buscar películas:', error.message);
-      }
-    }
-
-    // Uso del buscador de películas
-    const tituloBusqueda = 'Avengers'; // Cambia esto al título de película que deseas buscar
-    buscarPeliculas(tituloBusqueda);
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
